syntax = 'proto3';

package api;

// option go_package = "github.com/G-Research/armada/pkg/api";

import "google/protobuf/timestamp.proto";
import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/api/resource/generated.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "pkg/api/submit.proto";

import "k8s.io/api/networking/v1beta1/generated.proto";
// import "internal/events/events.proto";

// TODO: The command I have compiles the file, but puts the output in the wrong place. Puts it in github.com in the project root.
// Let's fix the proto build script to run from the command line
// Currently, we're using a docker image that gets all the right versions of everything
// This ensures that builds are reproducible, which is good
// I need both protoc and the gogofaster stuff
// So I need to install a specific version of protoc
// Let's see if I can go get releases
// go get downloaded the protobuf source, not the compiled binaries I wanted
// If I can compile it, I can download a particular release
// But then the compiler toolchain becomes important
// My goal is to automatically get known good protoc and gogo versions
// Currently, we pull in pre-compiled binaries from the internet
// I've figured out how to get the protoc source
// If I can compile it, then I would have a known good protoc version
// Alternatively, I could bring in the toolchain via self-service
// And put in checks for the hash of the binary
// That's probably easier
// Let's bring in the protoc toolchain via self-service
// Once I have it, I can write a script that uses go get to download all the deps and compiles the proto
// But then I can start with using the protoc version I already have
// gogofaster pulls in source code and then compiles a binary
// So if I put in a go install command for the right gogo version, then I know I have the right gogo version

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;

// Compiling requires that the following go packages are available on the local system:
// k8s.io/api v0.22.4
// k8s.io/apimachinery v0.22.4
//
// Compile with the following commands (run from the project root directory):
// mkdir -p ./build/proto/k8s.io/api/
// mkdir -p ./build/proto/k8s.io/apimachinery/
// mkdir -p ./build/proto/github.com/gogo/protobuf/
// cp -a $(go env GOPATH)/pkg/mod/k8s.io/api@v0.22.4/* ./build/proto/k8s.io/api/
// cp -a $(go env GOPATH)/pkg/mod/k8s.io/apimachinery@v0.22.4/* ./build/proto/k8s.io/apimachinery/
// cp -a $(go env GOPATH)/pkg/mod/github.com/gogo/protobuf@v1.3.2/* ./build/proto/github.com/gogo/protobuf/
// protoc -I=./build/proto -I=. --go_out=. --go_opt=paths=source_relative pkg/api/queue.proto --go_opt=Mk8s.io/apimachinery/pkg/api/resource/generated.proto=k8s.io/apimachinery/pkg/api/resource --go_opt=Mk8s.io/apimachinery/pkg/runtime/generated.proto=k8s.io/apimachinery/pkg/runtime --go_opt=Mk8s.io/apimachinery/pkg/runtime/schema/generated.proto=k8s.io/apimachinery/pkg/runtime/schema --go_opt=Mk8s.io/apimachinery/pkg/apis/meta/v1/generated.proto=k8s.io/apimachinery/pkg/apis/meta/v1 --go_opt=Mk8s.io/apimachinery/pkg/util/intstr/generated.proto=k8s.io/apimachinery/pkg/util/intstr --go_opt=Mk8s.io/api/core/v1/generated.proto=k8s.io/api/core/v1 --go_opt=Mk8s.io/api/networking/v1beta1/generated.proto=k8s.io/api/networking/v1beta1 --go_opt=Mpkg/api/submit.proto=github.com/G-Research/pkg/api --go_opt=Mpkg/api/queue.proto=github.com/G-Research/pkg/api --go_opt=Minternal/events/events.proto=github.com/G-Research/internal/events --go_opt=Mgoogle/protobuf/timestamp.proto=github.com/gogo/protobuf/types

// protoc -I=. -I=$(go env GOPATH)/pkg/mod -I=$(go env GOPATH)/pkg/mod/github.com/gogo/protobuf@v1.3.2/protobuf -I=./build/proto pkg/api/queue.proto --gogofaster_out=Mgoogle/protobuf/any.proto=github.com/gogo/protobuf/types,Mgoogle/protobuf/duration.proto=github.com/gogo/protobuf/types,Mgoogle/protobuf/struct.proto=github.com/gogo/protobuf/types,Mgoogle/protobuf/timestamp.proto=github.com/gogo/protobuf/types,Mgoogle/protobuf/wrappers.proto=github.com/gogo/protobuf/types:.

message Job {
    string id = 1;
    string client_id = 13;
    string job_set_id = 2;
    string queue = 3;
    string namespace = 7;
    map<string, string> labels = 9;
    map<string, string> annotations = 10;
    map<string, string> required_node_labels = 11 [deprecated = true];
    string owner = 8;
    repeated string queue_ownership_user_groups = 15;
    double priority = 4;
    k8s.io.api.core.v1.PodSpec pod_spec = 5 [deprecated = true]; // Use PodSpecs instead
    repeated k8s.io.api.core.v1.PodSpec pod_specs = 12;
    google.protobuf.Timestamp created = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    // Services can be provided either as Armada-specific config objects or as proper k8s objects.
    // These options are exclusive, i.e., if either ingress or services is provided,
    // then neither of k8s_ingress or k8s_service can be provided, and vice versa.
    repeated IngressConfig ingress = 14;
    repeated ServiceConfig services = 16;
    // repeated github.com.G-Research.armada.internal.events.KubernetesObject objects = 17;
    // github.com.G-Research.armada.internal.events.
    repeated k8s.io.api.networking.v1beta1.Ingress k8s_ingress = 17;
    repeated k8s.io.api.core.v1.Service k8s_service = 18;
}

message LeaseRequest {
    string cluster_id = 1;
    string pool = 8;
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> resources = 2 [(gogoproto.nullable) = false];
    ClusterLeasedReport cluster_leased_report  = 4 [(gogoproto.nullable) = false];
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> minimum_job_size = 6 [(gogoproto.nullable) = false];
    repeated NodeInfo nodes = 7 [(gogoproto.nullable) = false];
}

message NodeInfo {
    string name = 1;
    repeated k8s.io.api.core.v1.Taint taints = 2 [(gogoproto.nullable) = false];
    map<string,string> labels = 3;
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> allocatable_resources = 4 [(gogoproto.nullable) = false];
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> available_resources = 5 [(gogoproto.nullable) = false];
}

message NodeType {
    repeated k8s.io.api.core.v1.Taint taints = 1 [(gogoproto.nullable) = false];
    map<string,string> labels = 2;
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> allocatable_resources = 3 [(gogoproto.nullable) = false];
}

// Used to store last info in Redis
message ClusterSchedulingInfoReport {
    string cluster_id = 1;
    string pool = 7;
    google.protobuf.Timestamp report_time = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    repeated NodeType node_types = 5;
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> minimum_job_size = 6 [(gogoproto.nullable) = false];
}

message QueueLeasedReport {
    string name = 1;
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> resources_leased = 2 [(gogoproto.nullable) = false];
}

message ClusterLeasedReport {
    string cluster_id = 1;
    google.protobuf.Timestamp report_time = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    repeated QueueLeasedReport queues = 3;
}

message ComputeResource {
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> resources = 1 [(gogoproto.nullable) = false];
}

message NodeLabeling {
    map<string,string> labels = 3;
}

message JobLease {
    repeated Job job = 1;
}

message IdList {
    repeated string ids = 1;
}

message RenewLeaseRequest {
    string cluster_id = 1;
    repeated string ids = 2;
}

message ReturnLeaseRequest {
    string cluster_id = 1;
    string job_id = 2;
    OrderedStringMap avoid_node_labels = 4;
}

service AggregatedQueue {
    rpc LeaseJobs (LeaseRequest) returns (JobLease);
    rpc RenewLease (RenewLeaseRequest) returns (IdList);
    rpc ReturnLease (ReturnLeaseRequest) returns (google.protobuf.Empty);
    rpc ReportDone (IdList) returns (IdList);
}

message StringKeyValuePair {
   string key = 1;
   string value = 2;
}

message OrderedStringMap {
   repeated StringKeyValuePair entries = 1;
}

